# transcript2

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: README.md
examples/4XqVR6xI6Kw/: canva_spec.json  meta.json  plan.json  slides.json  structure.json
scripts/: debug_slide.py
src/transcript2/: __init__.py  cli.py  config.py  eval.py  pipeline.py  schema.py
src/transcript2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/transcript2/analyze/: chunker.py  structure.py
src/transcript2/compose/: critic.py  grounding.py  narrative.py  slides.py
src/transcript2/ingest/: transcript.py  youtube.py
src/transcript2/llm/: ollama_client.py  prompts.py
src/transcript2/render/: pdf.py  pptx.py  script.py
src/transcript2/visuals/: canva_adapter.py  frames.py
tests/: test_smoke.py
